--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
